# eovsapy

./: LICENSE.rst  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
eovsapy/: StringUtil.py  astronet.py  attncal.py  autocorrect_tp.py  azel_current_spikes.py  cal_calendar.py  cal_header.py  calibration.py  calwidget.py  chan_info_52.py  chan_util_52.py  chan_util_bc.py  coord_conv.py  daily_xsp.py  dbutil.py  disk_conv.py  dump_tsys.py  eovsa_array.py  eovsa_cat.py  eovsa_fits.py  eovsa_lst.py  eovsa_tracktable.py  eovsa_visibility.py  feed_rot_simulation.py  flare_spec.py  gaincal2.py  get_sat_info.py  get_xy_corr.py  goes.py  pipeline_allday_fits.py  pipeline_cal.py  read_idb.py  read_xml2.py  readbsc.py  readvla.py  rstn.py  solpnt.py  sqlutil.py  sun_pos.py  tooltip.py  (+5 more)
eovsapy/SourceCat/: mysql_tables.txt  mysql_tables_old.txt
eovsapy/shellScript/: add_yrdir.csh  crontablist.sh  daily_xsp.sh  pipeline.sh  pipeline1.csh  pipeline2.csh  pipeline_allday_fits.sh  pipeline_compress.bash  pipeline_compress.sh  pipeline_fdimg.bash  pipeline_fdimg.sh  pipeline_plt.bash  pipeline_plt.sh  pipeline_plt_movie.sh
