[project]
name = "eovsapy"
version = "0.1.0"
description = "Python code and files for Expanded Owens Valley Solar Array"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "The EOVSA team", email = "sijie.yu@njit.edu" },
]
license = { file = "LICENSE.rst" }
keywords = ["solar physics", "solar", "science", "sun", "radio", "miriad"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "mysql-connector-python",
    "aioftp==0.16.1",
    "aiohttp==3.8.1",
    "aiosignal==1.2.0",
    "aipy-eovsa",
    "astropy==4.1",
    "async-timeout==4.0.2",
    "asynctest==0.13.0",
    "attrs==21.4.0",
    "backcall==0.2.0",
    "certifi==2021.10.8",
    "chardet==4.0.0",
    "charset-normalizer==2.0.12",
    "cycler==0.11.0",
    "decorator==5.1.1",
    "ephem==4.1.3",
    "frozenlist==1.2.0",
    "healpy==1.15.0",
    "idna==3.3",
    "idna-ssl==1.1.0",
    "importlib-metadata==4.8.3",
    "importlib-resources==5.4.0",
    "ipython==7.16.3",
    "ipython-genutils==0.2.0",
    "jedi==0.17.2",
    "kiwisolver==1.3.1",
    "lxml==4.8.0",
    "matplotlib==3.3.4",
    "multidict==5.2.0",
    "mysql-connector-python==8.0.28",
    "numpy==1.19.5",
    "pandas==1.1.5",
    "parfive==1.1rc2",
    "parso==0.7.1",
    "pexpect==4.8.0",
    "pickleshare==0.7.5",
    "Pillow==8.4.0",
    "pkg_resources==0.0.0",
    "prompt-toolkit==3.0.28",
    "protobuf==3.19.4",
    "ptyprocess==0.7.0",
    "Pygments==2.11.2",
    "pyodbc==4.0.32",
    "pyparsing==3.0.7",
    "python-dateutil==2.8.2",
    "pytz==2021.3",
    "requests==2.27.1",
    "scipy==1.5.4",
    "six==1.16.0",
    "sunpy==2.0.11",
    "tk==0.1.0",
    "tqdm==4.63.0",
    "traitlets==4.3.3",
    "typing_extensions==4.1.1",
    "urllib3==1.26.9",
    "wcwidth==0.2.5",
    "yarl==1.7.2",
    "zipp==3.6.0"
]
[project.optional-dependencies]
dev = [
    "ipython==7.16.3",
    "PyQt5==5.15.6",
    "PyQt5-Qt5==5.15.2",
    "PyQt5-sip==12.9.1",
]

[project.urls]
Homepage = "https://github.com/ovro-eovsa/eovsapy"
Repository = "https://github.com/ovro-eovsa/eovsapy"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]


[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm>=6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pycodestyle]
max_line_length = 110

[tool.flake8]
max-line-length = 110
exclude = [
    ".git",
    ".idea",
    ".eggs",
    "__pycache__",
    "build",
    "dist",
    "eovsapy/__init__.py",
]

[tool.isort]
balanced_wrapping = true
skip = "eovsapy/__init__.py"
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = "eovsapy"
line_length = 110
multi_line_output = 3
sections = "STDLIB,THIRDPARTY,ASTROPY,FIRSTPARTY,LOCALFOLDER"

[tool.coverage.run]
omit = [
    "eovsapy/*setup*",
    "eovsapy/extern/*",
    "eovsapy/shellScript/*",
    "eovsapy/build/*",
    "eovsapy/dist/*",
    "eovsapy/*/tests/*",
    "eovsapy/version*",
    "eovsapy/__init__*",
    "obsolete/"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
    "def main\\(.*\\):",
    "pragma: py{ignore_python_version}",
]
